@@ -142,20 +142,24 @@ FONT 8, "MS Sans Serif"
 #else
 #define INFO_Y  18
 #endif
-IDD_INFO DIALOG 0, 0, 300, 56+INFO_Y
+IDD_INFO DIALOG 0, 0, 300, 88+INFO_Y
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | WS_POPUPWINDOW | WS_VISIBLE
 CAPTION "File information"
 FONT 8, "MS Sans Serif"
 {
 #ifdef WINAMP
-	AUTOCHECKBOX "&Show information about the currently playing file", IDC_PLAYING, 24, 8, 284, 12
+	AUTOCHECKBOX "Show information about the &currently playing file", IDC_PLAYING, 46, 8, 284, 12
 #endif
-	RTEXT "Author:", IDC_STATIC, 8, 8+INFO_Y, 24, 12
-	LTEXT "", IDC_AUTHOR, 40, 8+INFO_Y, 252, 12, SS_LEFT | SS_NOPREFIX
-	RTEXT "Name:", IDC_STATIC, 8, 22+INFO_Y, 24, 12
-	LTEXT "", IDC_NAME, 40, 22+INFO_Y, 252, 12, SS_LEFT | SS_NOPREFIX
-	RTEXT "Date:", IDC_STATIC, 8, 36+INFO_Y, 24, 12
-	LTEXT "", IDC_DATE, 40, 36+INFO_Y, 252, 12, SS_LEFT | SS_NOPREFIX
+	RTEXT "&Filename:", IDC_STATIC, 8, 10+INFO_Y, 30, 12
+	EDITTEXT IDC_FILENAME, 46, 8+INFO_Y, 246, 12, ES_LEFT | WS_BORDER | WS_TABSTOP | ES_READONLY
+	RTEXT "&Author:", IDC_STATIC, 8, 24+INFO_Y, 30, 12
+	EDITTEXT IDC_AUTHOR, 46, 22+INFO_Y, 246, 12
+	RTEXT "&Name:", IDC_STATIC, 8, 38+INFO_Y, 30, 12
+	EDITTEXT IDC_NAME, 46, 36+INFO_Y, 246, 12
+	RTEXT "&Date:", IDC_STATIC, 8, 52+INFO_Y, 30, 12
+	EDITTEXT IDC_DATE, 46, 50+INFO_Y, 246, 12
+	DEFPUSHBUTTON "&Save", IDC_SAVE, 144, 68+INFO_Y, 70, 14
+	PUSHBUTTON "Close", IDCANCEL, 222, 68+INFO_Y, 70, 14
 }
 #endif
 
